<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_Food_category"
            android:id="@+id/textView2"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/spinner"
            android:layout_gravity="center_vertical"
            android:spinnerMode="dialog" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_Food_name"
            android:id="@+id/textView3"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_weight="0.08"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/button"
            android:layout_gravity="center_vertical" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_Food_count"
            android:id="@+id/textView4"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_Food_unit"
            android:id="@+id/textView5"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/spinner2"
            android:layout_gravity="center_vertical"
            android:spinnerMode="dialog" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_Food_StorageLocation"
            android:id="@+id/textView6"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/spinner3"
            android:layout_gravity="center_vertical"
            android:spinnerMode="dialog" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_Food_StorageTime"
            android:id="@+id/textView7"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="新增"
            android:id="@+id/button2"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="取消"
            android:id="@+id/button3"
            android:layout_gravity="center_vertical" />
    </TableRow>

</LinearLayout>